Fix missing gaps for signing messages form

--- a/web/src/pages/messageVerificationPage/message_verification.module.scss
+++ b/web/src/pages/messageVerificationPage/message_verification.module.scss
@@ -1,3 +1,4 @@
+.signMessageWrapper,
 .verifyMessageWrapper {
   display: flex;
   flex-direction: column;
